fix: Breadcrumbs: statusbar message x button is not aligned (mac, linux) http://bugs.activestate.com/show_bug.cgi?id=100021
(integrated from komodo (trunk) change 83156 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@14013 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/shared/icons_rules.less
+++ b/src/chrome/komodo/skin/plat/shared/icons_rules.less
@@ -915,6 +915,20 @@ treechildren::-moz-tree-image(remotefile)
     list-style-image: @icon-close;
 }
 
+/* Bug #100021 */
+#statusbar-message-wrap button.close-button
+{
+    image
+    {
+        margin: 0;
+    }
+
+    label
+    {
+        visibility: collapse;
+    }
+}
+
 .tab-arrowscrollbox
 {
     .scrollbutton-up
